--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ h1 {color:#595857; font-size: 20px;}
  }
 .clear {clear: both}
 
-#login {
+.loginmain {
 	width: 423px;
-	height: 700px;
+	height: 750px;
 	margin: auto;
 	margin-top: 2%;
 
@@ -42,10 +42,9 @@ box-shadow: 0px 0px 10px 5px rgba(77,73,77,1);}
 border: 0px solid #000000;
     
 }
-#text {border-top: 1px dashed white;
-border-bottom: 1px dashed white;
-margin-bottom: 15px;
-text-align: justify}
+.text {border-top: 0.5px dashed white;
+border-bottom: 0.5px dashed white;
+margin-bottom: 15px; color:white;text-align: justify}
 
 
 .photo {width: 170px; height: 50px; margin-bottom: 20px;font-size: 13px;     margin-top: 30px;}
@@ -53,3 +52,4 @@ text-align: justify}
 .forma {margin: 0 0 10px 30px; padding: 10px; 
     padding-right: 45px;
 }
+footer {margin-top: 30px;padding-right: 40px}
